--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    />    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +25,7 @@
     -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/styles.css">
-    <title>React App</title>
+    <title>Solid Gamers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
